# flappybird-emscripten

./: CMakeLists.txt  CMakePresets.json  README.md  README_RU.md  audio.c  game.c  game.h  index.html  init.c  init.h  main.c  shaders.c  texture.c  utils.c  utils.h
